// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Darkens the colors in linear-gradient 1`] = `
.c0 {
  background: linear-gradient(rgb(255,102,102) 0%,rgb(0,0,153) 100%);
}

<div
  className="c0"
  end="blue"
  start="red"
/>
`;

exports[`Darkens the primary color 20% 1`] = `
.c0 {
  color: rgb(153,0,0);
}

<div
  className="c0"
/>
`;
